MD Settings: avoid double pref observation on Startup Pages

R=dschuyler@chromium.org
BUG=591517

Review URL: https://codereview.chromium.org/1776393003

Cr-Commit-Position: refs/heads/master@{#380561}

Former-commit-id: 4d8ec38c22b0a35ec194cf72d2b567e99397c59e